@@ -1,3 +1,7 @@
+2017-10-22  Araki Ken  <arakiken@users.sf.net>
+
+	* vt_parser.[ch]: "CSI ? Pm [rs]" is supported.
+
 2017-10-21  Araki Ken  <arakiken@users.sf.net>
 
 	* vt_parser.[ch]:
